Tried value records, but it doesn't work